GeoScript/src/myPackage/GeoScriptParser.java
// $ANTLR 3.5.1 //GeoScript.g 2025-11-27 11:17:07
package myPackage;

import java.util.Map;
  import java.util.HashMap;
  import java.util.List;
  import java.util.ArrayList;
  import org.antlr.runtime.RecognitionException;
  import org.antlr.runtime.Token;
import org.antlr.runtime.*;
import java.util.Stack;
import org.antlr.runtime.tree.*;

import myPackage.SemanticHandler.*;


@SuppressWarnings("all")
public class GeoScriptParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "COMMENTLINE", "HEX_COLOR", 
		"ID", "INT", "MOD", "STRING", "WS", "'!='", "'('", "')'", "'*'", "'+'", 
		"','", "'-'", "'/'", "';'", "'<'", "'='", "'=='", "'>'", "'AT'", "'CANVAS'", 
		"'CIRCLE'", "'COLOR'", "'DEF'", "'ELLIPSE'", "'ELSE'", "'FILL'", "'FOR'", 
		"'FROM'", "'IF'", "'LINE'", "'POINTS'", "'POLYGON'", "'RADII'", "'RADIUS'", 
		"'RECT'", "'ROTATE'", "'SCALE'", "'SIZE'", "'SQUARE'", "'STROKE'", "'TEXT'", 
		"'THEN'", "'TO'", "'TRANSLATE'", "'TRIANGLE'", "'VAR'", "'WHILE'", "'{'", 
		"'}'"
	};
	public static final int EOF=-1;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int COMMENT=4;
	public static final int COMMENTLINE=5;
	public static final int HEX_COLOR=6;
	public static final int ID=7;
	public static final int INT=8;
	public static final int MOD=9;
	public static final int STRING=10;
	public static final int WS=11;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public GeoScriptParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GeoScriptParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return GeoScriptParser.tokenNames; }
	@Override public String getGrammarFileName() { return "//GeoScript.g"; }


	  // 1. Istanza dell'handler
	  public SemanticHandler sem = new SemanticHandler();
	  
	  // 2. Lista per raccogliere i comandi del programma
	  // (Definita qui in alto, non tra le regole!)
	  public List<Command> programList = new ArrayList<Command>();

	  // 3. Override gestione errori
	  @Override
	  public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
	    String hdr = "Line " + e.line + ":" + e.charPositionInLine;
	    String msg = getErrorMessage(e, tokenNames);
	    System.err.println("Syntax error " + hdr + ": " + msg);
	  }


	public static class prog_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// //GeoScript.g:42:1: prog : (s= statement )* EOF ;
	public final GeoScriptParser.prog_return prog() throws RecognitionException {
		GeoScriptParser.prog_return retval = new GeoScriptParser.prog_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF1=null;
		ParserRuleReturnScope s =null;

		Object EOF1_tree=null;

		try {
			// //GeoScript.g:44:3: ( (s= statement )* EOF )
			// //GeoScript.g:44:5: (s= statement )* EOF
			{
			root_0 = (Object)adaptor.nil();


			// //GeoScript.g:44:5: (s= statement )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==COMMENTLINE||LA1_0==ID||(LA1_0 >= 26 && LA1_0 <= 27)||(LA1_0 >= 29 && LA1_0 <= 30)||LA1_0==33||(LA1_0 >= 35 && LA1_0 <= 36)||LA1_0==38||(LA1_0 >= 41 && LA1_0 <= 43)||LA1_0==45||LA1_0==47||(LA1_0 >= 50 && LA1_0 <= 53)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// //GeoScript.g:44:6: s= statement
					{
					pushFollow(FOLLOW_statement_in_prog64);
					s=statement();
					state._fsp--;

					adaptor.addChild(root_0, s.getTree());

					 if ((s!=null?((GeoScriptParser.statement_return)s).cmd:null) != null) programList.add((s!=null?((GeoScriptParser.statement_return)s).cmd:null)); 
					}
					break;

				default :
					break loop1;
				}
			}

			EOF1=(Token)match(input,EOF,FOLLOW_EOF_in_prog70); 
			EOF1_tree = (Object)adaptor.create(EOF1);
			adaptor.addChild(root_0, EOF1_tree);


			      // Esecuzione finale
			      for (Command c : programList) {
			        c.execute(sem);
			      }
			      sem.exportSVG("output.svg");
			    
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class statement_return extends ParserRuleReturnScope {
		public Command cmd;
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// //GeoScript.g:54:1: statement returns [Command cmd] : ( canvasStmt | colorDef | varDeclStmt | assignStmt | ifStmt | whileStmt | forStmt | transformStmt | shapeStmt | COMMENTLINE );
	public final GeoScriptParser.statement_return statement() throws RecognitionException {
		GeoScriptParser.statement_return retval = new GeoScriptParser.statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token COMMENTLINE11=null;
		ParserRuleReturnScope canvasStmt2 =null;
		ParserRuleReturnScope colorDef3 =null;
		ParserRuleReturnScope varDeclStmt4 =null;
		ParserRuleReturnScope assignStmt5 =null;
		ParserRuleReturnScope ifStmt6 =null;
		ParserRuleReturnScope whileStmt7 =null;
		ParserRuleReturnScope forStmt8 =null;
		ParserRuleReturnScope transformStmt9 =null;
		ParserRuleReturnScope shapeStmt10 =null;

		Object COMMENTLINE11_tree=null;

		try {
			// //GeoScript.g:55:3: ( canvasStmt | colorDef | varDeclStmt | assignStmt | ifStmt | whileStmt | forStmt | transformStmt | shapeStmt | COMMENTLINE )
			int alt2=10;
			switch ( input.LA(1) ) {
			case 26:
				{
				alt2=1;
				}
				break;
			case 29:
				{
				alt2=2;
				}
				break;
			case 52:
				{
				alt2=3;
				}
				break;
			case ID:
				{
				alt2=4;
				}
				break;
			case 35:
				{
				alt2=5;
				}
				break;
			case 53:
				{
				alt2=6;
				}
				break;
			case 33:
				{
				alt2=7;
				}
				break;
			case 42:
			case 43:
			case 50:
				{
				alt2=8;
				}
				break;
			case 27:
			case 30:
			case 36:
			case 38:
			case 41:
			case 45:
			case 47:
			case 51:
				{
				alt2=9;
				}
				break;
			case COMMENTLINE:
				{
				alt2=10;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// //GeoScript.g:55:5: canvasStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_canvasStmt_in_statement93);
					canvasStmt2=canvasStmt();
					state._fsp--;

					adaptor.addChild(root_0, canvasStmt2.getTree());

					 retval.cmd = null; 
					}
					break;
				case 2 :
					// //GeoScript.g:56:5: colorDef
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_colorDef_in_statement107);
					colorDef3=colorDef();
					state._fsp--;

					adaptor.addChild(root_0, colorDef3.getTree());

					 retval.cmd = null; 
					}
					break;
				case 3 :
					// //GeoScript.g:57:5: varDeclStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_varDeclStmt_in_statement123);
					varDeclStmt4=varDeclStmt();
					state._fsp--;

					adaptor.addChild(root_0, varDeclStmt4.getTree());

					 retval.cmd = (varDeclStmt4!=null?((GeoScriptParser.varDeclStmt_return)varDeclStmt4).cmd:null); 
					}
					break;
				case 4 :
					// //GeoScript.g:58:5: assignStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_assignStmt_in_statement136);
					assignStmt5=assignStmt();
					state._fsp--;

					adaptor.addChild(root_0, assignStmt5.getTree());

					 retval.cmd = (assignStmt5!=null?((GeoScriptParser.assignStmt_return)assignStmt5).cmd:null); 
					}
					break;
				case 5 :
					// //GeoScript.g:59:5: ifStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_ifStmt_in_statement150);
					ifStmt6=ifStmt();
					state._fsp--;

					adaptor.addChild(root_0, ifStmt6.getTree());

					 retval.cmd = (ifStmt6!=null?((GeoScriptParser.ifStmt_return)ifStmt6).cmd:null); 
					}
					break;
				case 6 :
					// //GeoScript.g:60:5: whileStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_whileStmt_in_statement168);
					whileStmt7=whileStmt();
					state._fsp--;

					adaptor.addChild(root_0, whileStmt7.getTree());

					 retval.cmd = (whileStmt7!=null?((GeoScriptParser.whileStmt_return)whileStmt7).cmd:null); 
					}
					break;
				case 7 :
					// //GeoScript.g:61:5: forStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_forStmt_in_statement183);
					forStmt8=forStmt();
					state._fsp--;

					adaptor.addChild(root_0, forStmt8.getTree());

					 retval.cmd = (forStmt8!=null?((GeoScriptParser.forStmt_return)forStmt8).cmd:null); 
					}
					break;
				case 8 :
					// //GeoScript.g:62:5: transformStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_transformStmt_in_statement200);
					transformStmt9=transformStmt();
					state._fsp--;

					adaptor.addChild(root_0, transformStmt9.getTree());

					 retval.cmd = null; 
					}
					break;
				case 9 :
					// //GeoScript.g:63:5: shapeStmt
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_shapeStmt_in_statement211);
					shapeStmt10=shapeStmt();
					state._fsp--;

					adaptor.addChild(root_0, shapeStmt10.getTree());

					 retval.cmd = (shapeStmt10!=null?((GeoScriptParser.shapeStmt_return)shapeStmt10).cmd:null); 
					}
					break;
				case 10 :
					// //GeoScript.g:64:5: COMMENTLINE
					{
					root_0 = (Object)adaptor.nil();


					COMMENTLINE11=(Token)match(input,COMMENTLINE,FOLLOW_COMMENTLINE_in_statement226); 
					COMMENTLINE11_tree = (Object)adaptor.create(COMMENTLINE11);
					adaptor.addChild(root_0, COMMENTLINE11_tree);

					 retval.cmd = null; 
					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class canvasStmt_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "canvasStmt"
	// //GeoScript.g:67:1: canvasStmt : 'CANVAS' '(' w= INT ',' h= INT ')' ';' ;
	public final GeoScriptParser.canvasStmt_return canvasStmt() throws RecognitionException {
		GeoScriptParser.canvasStmt_return retval = new GeoScriptParser.canvasStmt_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token w=null;
		Token h=null;
		Token string_literal12=null;
		Token char_literal13=null;
		Token char_literal14=null;
		Token char_literal15=null;
		Token char_literal16=null;

		Object w_tree=null;
		Object h_tree=null;
		Object string_literal12_tree=null;
		Object char_literal13_tree=null;
		Object char_literal14_tree=null;
		Object char_literal15_tree=null;
		Object char_literal16_tree=null;

		try {
			// //GeoScript.g:68:3: ( 'CANVAS' '(' w= INT ',' h= INT ')' ';' )
			// //GeoScript.g:68:5: 'CANVAS' '(' w= INT ',' h= INT ')' ';'
			{
			root_0 = (Object)adaptor.nil();


			string_literal12=(Token)match(input,26,FOLLOW_26_in_canvasStmt246); 
			string_literal12_tree = (Object)adaptor.create(string_literal12);
			adaptor.addChild(root_0, string_literal12_tree);

			char_literal13=(Token)match(input,13,FOLLOW_13_in_canvasStmt248); 
			char_literal13_tree = (Object)adaptor.create(char_literal13);
			adaptor.addChild(root_0, char_literal13_tree);

			w=(Token)match(input,INT,FOLLOW_INT_in_canvasStmt252); 
			w_tree = (Object)adaptor.create(w);
			adaptor.addChild(root_0, w_tree);

			char_literal14=(Token)match(input,17,FOLLOW_17_in_canvasStmt254); 
			char_literal14_tree = (Object)adaptor.create(char_literal14);
			adaptor.addChild(root_0, char_literal14_tree);

			h=(Token)match(input,INT,FOLLOW_INT_in_canvasStmt258); 
			h_tree = (Object)adaptor.create(h);
			adaptor.addChild(root_0, h_tree);

			char_literal15=(Token)match(input,14,FOLLOW_14_in_canvasStmt260); 
			char_literal15_tree = (Object)adaptor.create(char_literal15);
			adaptor.addChild(root_0, char_literal15_tree);

			char_literal16=(Token)match(input,20,FOLLOW_20_in_canvasStmt262); 
			char_literal16_tree = (Object)adaptor.create(char_literal16);
			adaptor.addChild(root_0, char_literal16_tree);

			 sem.setCanvas(Integer.parseInt(w.getText()), Integer.parseInt(h.getText())); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "canvasStmt"


	public static class colorDef_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "colorDef"
	// //GeoScript.g:72:1: colorDef : 'DEF' id= ID '=' hex= HEX_COLOR ';' ;
	public final GeoScriptParser.colorDef_return colorDef() throws RecognitionException {
		GeoScriptParser.colorDef_return retval = new GeoScriptParser.colorDef_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token id=null;
		Token hex=null;
		Token string_literal17=null;
		Token char_literal18=null;
		Token char_literal19=null;

		Object id_tree=null;
		Object hex_tree=null;
		Object string_literal17_tree=null;
		Object char_literal18_tree=null;
		Object char_literal19_tree=null;

		try {
			// //GeoScript.g:73:3: ( 'DEF' id= ID '=' hex= HEX_COLOR ';' )
			// //GeoScript.g:73:5: 'DEF' id= ID '=' hex= HEX_COLOR ';'
			{
			root_0 = (Object)adaptor.nil();


			string_literal17=(Token)match(input,29,FOLLOW_29_in_colorDef281); 
			string_literal17_tree = (Object)adaptor.create(string_literal17);
			adaptor.addChild(root_0, string_literal17_tree);

			id=(Token)match(input,ID,FOLLOW_ID_in_colorDef285); 
			id_tree = (Object)adaptor.create(id);
			adaptor.addChild(root_0, id_tree);

			char_literal18=(Token)match(input,22,FOLLOW_22_in_colorDef287); 
			char_literal18_tree = (Object)adaptor.create(char_literal18);
			adaptor.addChild(root_0, char_literal18_tree);

			hex=(Token)match(input,HEX_COLOR,FOLLOW_HEX_COLOR_in_colorDef291); 
			hex_tree = (Object)adaptor.create(hex);
			adaptor.addChild(root_0, hex_tree);

			char_literal19=(Token)match(input,20,FOLLOW_20_in_colorDef293); 
			char_literal19_tree = (Object)adaptor.create(char_literal19);
			adaptor.addChild(root_0, char_literal19_tree);

			 sem.defineColor(id.getText(), hex.getText()); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "colorDef"


	public static class varDeclStmt_return extends ParserRuleReturnScope {
		public Command cmd;
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "varDeclStmt"
	// //GeoScript.g:77:1: varDeclStmt returns [Command cmd] : 'VAR' id= ID '=' e= expr ';' ;
	public final GeoScriptParser.varDeclStmt_return varDeclStmt() throws RecognitionException {
		GeoScriptParser.varDeclStmt_return retval = new GeoScriptParser.varDeclStmt_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token id=null;
		Token string_literal20=null;
		Token char_literal21=null;
		Token char_literal22=null;
		ParserRuleReturnScope e =null;

		Object id_tree=null;
		Object string_literal20_tree=null;
		Object char_literal21_tree=null;
		Object char_literal22_tree=null;

		try {
			// //GeoScript.g:78:3: ( 'VAR' id= ID '=' e= expr ';' )
			// //GeoScript.g:78:5: 'VAR' id= ID '=' e= expr ';'
			{
			root_0 = (Object)adaptor.nil();


			string_literal20=(Token)match(input,52,FOLLOW_52_in_varDeclStmt316); 
			string_literal20_tree = (Object)adaptor.create(string_literal20);
			adaptor.addChild(root_0, string_literal20_tree);

			id=(Token)match(input,ID,FOLLOW_ID_in_varDeclStmt320); 
			id_tree = (Object)adaptor.create(id);
			adaptor.addChild(root_0, id_tree);

			char_literal21=(Token)match(input,22,FOLLOW_22_in_varDeclStmt322); 
			char_literal21_tree = (Object)adaptor.create(char_literal21);
			adaptor.addChild(root_0, char_literal21_tree);

			pushFollow(FOLLOW_expr_in_varDeclStmt326);
			e=expr();
			state._fsp--;

			adaptor.addChild(root_0, e.getTree());

			char_literal22=(Token)match(input,20,FOLLOW_20_in_varDeclStmt328); 
			char_literal22_tree = (Object)adaptor.create(char_literal22);
			adaptor.addChild(root_0, char_literal22_tree);

			 retval.cmd = new VarDeclCommand(id.getText(), (e!=null?((GeoScriptParser.expr_return)e).expr:null)); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "varDeclStmt"


	public static class assignStmt_return extends ParserRuleReturnScope {
		public Command cmd;
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "assignStmt"
	// //GeoScript.g:82:1: assignStmt returns [Command cmd] : id= ID '=' e= expr ';' ;
	public final GeoScriptParser.assignStmt_return assignStmt() throws RecognitionException {
		GeoScriptParser.assignStmt_return retval = new GeoScriptParser.assignStmt_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token id=null;
		Token char_literal23=null;
		Token char_literal24=null;
		ParserRuleReturnScope e =null;

		Object id_tree=null;
		Object char_literal23_tree=null;
		Object char_literal24_tree=null;

		try {
			// //GeoScript.g:83:3: (id= ID '=' e= expr ';' )
			// //GeoScript.g:83:5: id= ID '=' e= expr ';'
			{
			root_0 = (Object)adaptor.nil();


			id=(Token)match(input,ID,FOLLOW_ID_in_assignStmt353); 
			id_tree = (Object)adaptor.create(id);
			adaptor.addChild(root_0, id_tree);

			char_literal23=(Token)match(input,22,FOLLOW_22_in_assignStmt355); 
			char_literal23_tree = (Object)adaptor.create(char_literal23);
			adaptor.addChild(root_0, char_literal23_tree);

			pushFollow(FOLLOW_expr_in_assignStmt359);
			e=expr();
			state._fsp--;

			adaptor.addChild(root_0, e.getTree());
